[package]
name = "ty"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
once_cell = "1.21.3"
phf = "0.13.1"
reqwest = { version = "0.12.24", features = ["json"]}
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
