[package]
name = "ty"
description = "YouTube video extractor written in Rust that can be used anywhere in web or native environments, based on an extremely small subset of yt-dlp."
version = "0.1.0"
authors = ["Dev-Siri"]
license = "MIT"
repository = "https://github.com/Dev-Siri/ty"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.100"
deno_core = "0.311.0"
fancy-regex = "0.16.2"
once_cell = "1.21.3"
phf = "0.13.1"
rayon = "1.11.0"
reqwest = { version = "0.12.24", features = ["json"]}
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha1 = "0.10.6"
url = "2.5.7"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"