[package]
name = "tydle"
description = "YouTube video extractor written in Rust that can be used anywhere in web or native environments, based on an extremely small subset of yt-dlp."
version = "0.1.10"
authors = ["Dev-Siri"]
license = "MIT"
repository = "https://github.com/Dev-Siri/tydle"
homepage = "https://github.com/Dev-Siri/tydle"
documentation = "https://docs.rs/tydle"
readme = "README.md"
keywords = ["youtube", "extractor", "yt-dlp", "video", "innertube"]
categories = ["multimedia", "web-programming", "api-bindings"]
include = ["src/**/*", "Cargo.toml", "README.md", "LICENSE"]
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "tydle"
path = "src/main.rs"
required-features = ["logging", "cipher", "cli"]

[features]
default = ["logging", "cli"]
logging = ["dep:log", "dep:env_logger"]
cli = ["dep:clap"]
cipher = ["dep:deno_core"]

[dependencies]
anyhow = "1.0.100"
fancy-regex = "0.16.2"
once_cell = "1.21.3"
phf = "0.13.1"
rayon = "1.11.0"
reqwest = { version = "0.12.24", default-features = false, features = ["native-tls", "json"]}
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha1 = "0.10.6"
url = "2.5.7"
log = { version = "0.4", optional = true }
maplit = "1.0.2"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1", features = ["full"] }
deno_core = { version = "0.311.0", optional = true }
env_logger = { version = "0.11", optional = true }
clap = { version = "4.5.51", features = ["derive"], optional = true }
colored = "3"
num_cpus = "1.17.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
serde-wasm-bindgen = "0.4"
js-sys = "0.3.82"
tsify = "0.5.6"
